<resources>
    <string name="app_name">WeGrab</string>
    <string name="xposed_description">Auto Grab Lucky Money</string>
    <!--PreferencesUtils WeChat-->
    <string name="pref_wechat">WeChat</string>
    <string name="pref_wechat_open">Auto Grab Lucky Money</string>
    <string name="pref_wechat_self">Don\'t Grab Send by Self</string>
    <string name="pref_wechat_whisper">Don\'t Grab in Whisper Mode</string>
    <string name="pref_wechat_mute">Don\'t Grab in Mute Mode(Group)</string>

    <!--PreferencesUtils QQ-->
    <string name="pref_qq">QQ</string>
    <string name="pref_qq_open">Auto Grab Lucky Money</string>
    <string name="pref_qq_word">Don\'t Grab in Word Mode</string>
    <string name="pref_qq_self">Don\'t Grab Send by Self</string>
    <string name="pref_qq_compatible">Compatible Mode(Only 6.6.0+)</string>

    <!--PreferencesUtils ModuleHide-->
    <string name="pref_hide_mode">Hide Mode</string>
    <string name="pref_hide_new">The New Hide Mode</string>
    <string name="pref_hide_new_summary">The New Hide Mode will Hide Module/Xposed Installer Application Information for All the tencent Application</string>

    <!--PreferencesUtils More-->
    <string name="pref_more">More</string>

    <string name="pref_wechat_version">WeChat Version</string>
    <string name="pref_wechat_version_summary">Version：6.3.30(This Version Supported)</string>

    <string name="pref_qq_version">QQ Version</string>
    <string name="pref_qq_version_summary">Version：6.6.0(This Version Supported)</string>

    <string name="pref_wechat_tinker">WeChat Trouble</string>
    <string name="pref_wechat_tinker_summary">Click Here to Solve the Problems Such as the WeChat Black Screen, ANRs(Need Root)</string>


    <!--PreferencesUtils About-->
    <string name="pref_about">About</string>

    <string name="pref_agreement">Agreement</string>
    <string name="pref_summary_agreement">
        1. Use this module to bear all the consequences !
        \n2. This module may be caused by WeChat and QQ freeze your ID\'s, please use caution !
        \n3. This module access and use are free, do not use for sell.
    </string>

    <string name="pref_explain">Explain</string>
    <string name="pref_summary_explain">
        1. This module use the Xposed Hook technology, but don\'t do evil !
        \n2. Xposed Module Repository as the only delivery way for this module, please go here to get original application and update.
        \n3. Application with hidden function, WeChat and QQ supported。
        \n4. For WeChat and QQ multi open, because a lot of software solutions, application does not fit it.
        \n5. Application use the GPLv3 Open Source Agreement.
    </string>




    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="supported">Version：%s(This Version Supported)</string>
    <string name="unsupported">Version：%s(This Version not Supported)</string>
    <string name="attention">Attention</string>
    <string name="message">The Module is not Active, Reboot Now ?</string>

    <string name="tips">Tips</string>
    <string name="compatible_message">Compatibility Mode can Solve the Grab Problem of Clean the QQ Cache and in Mute Mode.</string>

    <string name="root_message">Cannot Access Root !</string>
    <string name="tinker_message">Already Solve the Trouble</string>
</resources>
